<resources>
    <string name="app_name">Tic Tac Toe Game</string>
    <string name="footer">Think Outside of The Box</string>
    <string name="playername1">Player 1  </string>
    <string name="playername2">Player 2  </string>
    <string name="btnstart">Start </string>
    <string name="nameply">Name :</string>
    <string name="reset">RESET</string>
    <string name="back_home">  BACK</string>
    <string name="contentDescription">cross and circle container</string>
    <string name="score">0</string>
</resources>